# TEST

./: AGENTS.md  Untitled-1.txt  gods_eye_output.txt  homework  mud4ai_local_save.json  口試防禦小抄.md
_interactive_design_1/: .ingest_state.json  AGENTS.md  SETUP.md  docker-compose.yml  pyproject.toml
_interactive_design_1/.agents/: module_registry.json
_interactive_design_1/.agents/reflections/: 2026-03-21.md  2026-03-23.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-30.md  2026-04-25.md  2026-04-30.md  2026-05-07.md  2026-05-14.md  2026-05-16.md  2026-06-17.md  2026-06-24.md
_interactive_design_1/.agents/workflows/: end.md  start.md
_interactive_design_1/.lancedb/project_chunks.lance/_transactions/: 0-0ecfa7bc-429a-4d37-a351-449049a75d8d.txn
_interactive_design_1/docs/: DOMAIN_CONTEXT.md
_interactive_design_1/scripts/: consolidate_memory.py  ingest.py  query.py
_interactive_design_1/scripts/system/: health_check.py
_interactive_design_1/tests/: test_basic.py
ar/: run
bowling/: BallController.cs  GameManager.cs  PinController.cs  bowling.txt  教學說明書.md
game/: MUDClient.cs  text
mud4ai-main/: MUD4AI_Epic_Finale_Reflection.md  MUD4AI_Epic_Finale_Reflection.txt  README.md  append_status_to_reflection.py  attack_boss.py  auto_explore.py  auto_farm_all.py  auto_farmer_infinity.py  auto_quest_rule.py  auto_solver.py  awaken_skills.py  check_online_direct.py  check_players.py  check_status.py  commands.txt  contact_via_portal.py  cook_and_explore.py  coordinated_discovery.py  craft_and_find_quest.py  craft_armor_and_awaken_skills.py  debug_look.py  (+94 more)
(+30 files in other folders)
